chore: update parts documentation
