# docs/swagger.json
@@ -353,6 +353,13 @@
                         "schema": {
                             "$ref": "#/definitions/schemas.PartCreate"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer Authorization",
+                        "name": "authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {}
